YELLA_TEST(file-name-matcher-test)
TARGET_LINK_LIBRARIES(file-name-matcher-test file)
YELLA_TEST(attribute-test)
TARGET_LINK_LIBRARIES(attribute-test file)
YELLA_TEST(state-db-test)
TARGET_LINK_LIBRARIES(state-db-test file)
YELLA_TEST(element-test)
TARGET_LINK_LIBRARIES(element-test file)
YELLA_TEST(collect-attributes-test)
TARGET_LINK_LIBRARIES(collect-attributes-test file)
