MACRO(YELLA_FILE_TEST NM)
    YELLA_TEST(${NM})
    TARGET_LINK_LIBRARIES(${NM} file)
ENDMACRO()

YELLA_FILE_TEST(file-name-matcher-test)
YELLA_FILE_TEST(attribute-test)
YELLA_FILE_TEST(state-db-test)
YELLA_FILE_TEST(element-test)
YELLA_FILE_TEST(collect-attributes-test)
YELLA_FILE_TEST(state-db-pool-test)
YELLA_FILE_TEST(accumulator-test)
YELLA_FILE_TEST(job-test)
YELLA_FILE_TEST(event-source-test)
YELLA_FILE_TEST(job-queue-test)
IF(YELLA_MACINTOSH)
    SET_TARGET_PROPERTIES(job-queue-test PROPERTIES LINK_FLAGS "-Wl,-alias,_run_job,__wrap_run_job")
ELSE()
    SET_TARGET_PROPERTIES(job-queue-test PROPERTIES LINK_FLAGS "-Wl,--wrap=run_job")
ENDIF()
